--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,15 @@
 #modal:empty {
   display: none;
 }
+
+#modal > div {
+  width: 80%;
+  height: 80%;
+}
+.resp-iframe {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
